--- a/ver11segues/ver11segues/Base.lproj/Main.storyboard
+++ b/ver11segues/ver11segues/Base.lproj/Main.storyboard
@@ -63,14 +63,8 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Firstn" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V76-Eu-Kd0">
-                                <rect key="frame" x="61" y="79" width="31.5" height="14.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SMv-PT-SOL">
-                                <rect key="frame" x="277" y="559" width="46" height="33"/>
+                                <rect key="frame" x="277" y="547" width="46" height="33"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Photo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -79,87 +73,52 @@
                                     <action selector="photoButtonPressed:" destination="3ys-9G-Sat" eventType="touchUpInside" id="GXy-pq-J2G"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="255" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a lastName" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OsU-yV-K7B">
-                                <rect key="frame" x="142" y="113" width="131.5" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="255" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a firstName" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8mT-hS-lJD">
-                                <rect key="frame" x="142" y="72" width="133" height="30"/>
+                                <rect key="frame" x="233" y="72" width="133" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Orignl:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BgA-Iv-mrT">
-                                <rect key="frame" x="16" y="79" width="37" height="14.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Orignl:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rud-uA-EaB">
-                                <rect key="frame" x="16" y="120" width="37" height="14.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="yelloow" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8OK-HG-6ci">
-                                <rect key="frame" x="61" y="120" width="42.5" height="14.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" horizontalCompressionResistancePriority="100" translatesAutoresizingMaskIntoConstraints="NO" id="DvT-Lg-SxE">
+                            <view contentMode="scaleToFill" horizontalCompressionResistancePriority="100" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DvT-Lg-SxE">
                                 <rect key="frame" x="5" y="-45" width="8" height="84"/>
                                 <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="me3.png" translatesAutoresizingMaskIntoConstraints="NO" id="kh3-Vh-K1t">
+                                <rect key="frame" x="178" y="155" width="244" height="260"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="260" id="GNF-Gk-ygV"/>
+                                    <constraint firstAttribute="width" constant="244" id="hcX-xh-fi9"/>
+                                </constraints>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo requires camera" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0KN-fG-sJj">
-                                <rect key="frame" x="222" y="531" width="155.5" height="18"/>
+                                <rect key="frame" x="223" y="521" width="155.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="me3.png" translatesAutoresizingMaskIntoConstraints="NO" id="kh3-Vh-K1t">
-                                <rect key="frame" x="178" y="170" width="244" height="260"/>
-                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="255" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a lastName" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OsU-yV-K7B">
+                                <rect key="frame" x="235" y="110" width="131.5" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8OK-HG-6ci" firstAttribute="leading" secondItem="rud-uA-EaB" secondAttribute="trailing" constant="8" id="586-cr-GJw"/>
-                            <constraint firstAttribute="centerX" secondItem="kh3-Vh-K1t" secondAttribute="centerX" id="7qN-xz-eTJ"/>
-                            <constraint firstItem="BgA-Iv-mrT" firstAttribute="top" secondItem="2GO-hY-pWS" secondAttribute="bottom" constant="15" id="Ai2-L0-1gN"/>
-                            <constraint firstItem="OsU-yV-K7B" firstAttribute="leading" secondItem="8OK-HG-6ci" secondAttribute="trailing" constant="38.5" id="Bb6-xQ-MvD"/>
-                            <constraint firstAttribute="centerX" secondItem="SMv-PT-SOL" secondAttribute="centerX" id="ENS-A5-0v7"/>
-                            <constraint firstItem="rud-uA-EaB" firstAttribute="leading" secondItem="vzn-TB-ess" secondAttribute="leadingMargin" id="Eca-NL-FB0"/>
-                            <constraint firstItem="SMv-PT-SOL" firstAttribute="top" secondItem="0KN-fG-sJj" secondAttribute="bottom" constant="10" id="HQF-gQ-zTq"/>
-                            <constraint firstItem="8mT-hS-lJD" firstAttribute="top" secondItem="2GO-hY-pWS" secondAttribute="bottom" constant="8" id="LSH-FI-bWI"/>
-                            <constraint firstItem="OsU-yV-K7B" firstAttribute="top" secondItem="8mT-hS-lJD" secondAttribute="bottom" constant="11" id="Lo1-lM-mk8"/>
-                            <constraint firstItem="rud-uA-EaB" firstAttribute="top" secondItem="BgA-Iv-mrT" secondAttribute="bottom" constant="26.5" id="M2g-Z7-eRw"/>
-                            <constraint firstItem="8mT-hS-lJD" firstAttribute="leading" secondItem="V76-Eu-Kd0" secondAttribute="trailing" constant="50" id="OJi-aE-gs9"/>
-                            <constraint firstItem="2GO-hY-pWS" firstAttribute="top" secondItem="DvT-Lg-SxE" secondAttribute="bottom" constant="25" id="QVo-Sh-cdZ"/>
-                            <constraint firstItem="8OK-HG-6ci" firstAttribute="leading" secondItem="rud-uA-EaB" secondAttribute="trailing" constant="8" id="WId-dd-rt4"/>
-                            <constraint firstItem="DvT-Lg-SxE" firstAttribute="leading" secondItem="vzn-TB-ess" secondAttribute="leadingMargin" constant="-11" id="X3K-jh-q9j"/>
-                            <constraint firstItem="BgA-Iv-mrT" firstAttribute="leading" secondItem="vzn-TB-ess" secondAttribute="leadingMargin" id="Y6f-mz-hNw"/>
-                            <constraint firstItem="DvT-Lg-SxE" firstAttribute="top" secondItem="vzn-TB-ess" secondAttribute="topMargin" constant="-45" id="YgH-Wm-XXr"/>
-                            <constraint firstItem="Au0-9e-jP4" firstAttribute="top" secondItem="SMv-PT-SOL" secondAttribute="bottom" constant="8" id="Z7N-OA-gwD"/>
-                            <constraint firstItem="V76-Eu-Kd0" firstAttribute="top" secondItem="2GO-hY-pWS" secondAttribute="bottom" constant="15" id="cbc-0s-dIc"/>
-                            <constraint firstAttribute="centerY" secondItem="kh3-Vh-K1t" secondAttribute="centerY" id="dtr-VL-kji"/>
-                            <constraint firstItem="8OK-HG-6ci" firstAttribute="top" secondItem="V76-Eu-Kd0" secondAttribute="bottom" constant="26.5" id="eF4-YT-AQR"/>
-                            <constraint firstAttribute="centerX" secondItem="DvT-Lg-SxE" secondAttribute="centerX" id="fWp-2D-8cX"/>
-                            <constraint firstItem="V76-Eu-Kd0" firstAttribute="leading" secondItem="BgA-Iv-mrT" secondAttribute="trailing" priority="950" constant="8" id="j25-HU-Pi6"/>
-                            <constraint firstAttribute="trailing" secondItem="DvT-Lg-SxE" secondAttribute="trailing" constant="587" id="kph-Ik-R1V"/>
-                            <constraint firstAttribute="centerX" secondItem="0KN-fG-sJj" secondAttribute="centerX" id="znM-t6-ceb"/>
+                            <constraint firstItem="OsU-yV-K7B" firstAttribute="top" secondItem="8mT-hS-lJD" secondAttribute="bottom" constant="8" id="4Mb-Sv-OyC"/>
+                            <constraint firstAttribute="centerX" secondItem="SMv-PT-SOL" secondAttribute="centerX" id="Cuh-sO-r6v"/>
+                            <constraint firstItem="SMv-PT-SOL" firstAttribute="top" secondItem="0KN-fG-sJj" secondAttribute="bottom" constant="8" id="DdQ-1y-ekf"/>
+                            <constraint firstAttribute="centerX" secondItem="0KN-fG-sJj" secondAttribute="centerX" id="Q0d-sy-pr5"/>
+                            <constraint firstAttribute="centerX" secondItem="kh3-Vh-K1t" secondAttribute="centerX" id="Y3M-Ei-FGW"/>
+                            <constraint firstAttribute="centerX" secondItem="OsU-yV-K7B" secondAttribute="centerX" id="e0s-nZ-C6P"/>
+                            <constraint firstItem="kh3-Vh-K1t" firstAttribute="top" secondItem="OsU-yV-K7B" secondAttribute="bottom" constant="15" id="etK-rQ-Oqe"/>
+                            <constraint firstAttribute="centerX" secondItem="8mT-hS-lJD" secondAttribute="centerX" id="nYO-OU-vV8"/>
+                            <constraint firstItem="8mT-hS-lJD" firstAttribute="top" secondItem="2GO-hY-pWS" secondAttribute="bottom" constant="8" id="wM8-P1-4W2"/>
+                            <constraint firstItem="Au0-9e-jP4" firstAttribute="top" secondItem="SMv-PT-SOL" secondAttribute="bottom" constant="20" id="yZU-qX-t8z"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="fWp-2D-8cX"/>
-                                <exclude reference="586-cr-GJw"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="cameraMissingAlert" destination="0KN-fG-sJj" id="8Tv-85-j5x"/>
-                        <outlet property="firstNameLabel" destination="V76-Eu-Kd0" id="XEo-oB-5PT"/>
                         <outlet property="firstNameTextField" destination="8mT-hS-lJD" id="1hU-WY-4fO"/>
-                        <outlet property="lastNameLabel" destination="8OK-HG-6ci" id="8k6-lM-ohX"/>
+                        <outlet property="imageView" destination="kh3-Vh-K1t" id="rbM-lu-7V1"/>
                         <outlet property="lastNameTextField" destination="OsU-yV-K7B" id="e9t-Tj-bxp"/>
                     </connections>
                 </viewController>
